--- a/css/xiangqingye.css
+++ b/css/xiangqingye.css
@@ -71,8 +71,8 @@ a{
 }
 .box4{
 	margin-top: 16px;
-	margin-left: 85px;
-	width: 82px;
+	margin-left: 78px;
+	width: 90px;
 	height: 40px;
 	border: 1px solid #e7e6e3;
 	border-radius: 3px;
@@ -185,6 +185,7 @@ a{
 	margin: 20px;
 	float: left;
 }
+/*放大镜*/
 #bb5{
 	width: 408px;
 	height: 408px;
@@ -255,6 +256,93 @@ a{
 	font-size: 12px;
 	color: #676660;
 	margin-left: 20px;
+}
+.pp1{
+	font-size: 12px;
+	height: 18px;
+	padding-top: 3px;
+	float: left;
+	text-align: center;
+	padding: 6px 0 0 10px;
+}
+	
+.pp2{
+	font-size: 12px;
+	height: 30px;
+	padding-top: 3px;
+	float: left;
+	padding: 6px 0 0 10px;
+}
+.dd1{
+	width: 62px;
+	height: 30px;
+	float: left;
+}
+.dd2{
+	width: 62px;
+	height: 30px;
+	float: left;
+	margin-left: 10px;
+}
+.ss1{
+	padding: 3px 0 0 25px;
+	width: 70px;
+	height: 32px;
+	float: left;
+}
+.ss2{
+	width: 106px;
+	height: 32px;
+	float: left;
+	margin-left: 24px;
+}
+.nn1{
+	height: 28px;
+	width: 26px;
+	float: left;
+	text-align: center;
+	background-color: white;
+	border:1px solid #cecbc5;
+	border-right: 0px;
+	cursor: not-allowed;
+}
+.nn2{
+	height: 28px;
+	width: 50px;
+	float: left;
+	text-align: center;
+	cursor: pointer;
+	border:1px solid #cecbc5;
+}
+.nn3{
+	height: 28px;
+	width: 26px;
+	float: left;
+	text-align: center;
+	background-color: white; 
+	border:1px solid #cecbc5;
+	border-left: 0px;
+}
+.button1{
+	width: 148px;
+	height: 40px;
+	border: 1px solid red;
+	text-align: center;
+	background-color: white;
+	color: #ff0754;
+	border-radius: 5%;
+	float: left;
+}
+.button2{
+	width: 148px;
+	height: 40px;
+	border: 1px solid red;
+	text-align: center;
+	background-color: #ff0754;
+	color: white;
+	border-radius: 5%;
+	margin-left: 20px;
+	float: left;
 }
 /*底部1*/
 .box9_2{
@@ -334,4 +422,28 @@ a{
 	width: 1180px;
 	height: 55px;
 	margin: 0 auto;
+}
+/*加购物车*/
+.add1{
+	width: 100%;
+	height: 100%;
+	background: rgba(222,220,216,0.4);
+	z-index: 1;
+	position: fixed;
+	display: none;
+	top:0;
+	left: 0;
+}
+.add2{
+	width: 398px;
+	height: 228px;
+	border: 4px solid #aca9d3;
+	overflow:hidden;
+	background-color: white;
+	position: absolute;
+	margin:auto;
+	top: 0;
+	right: 0;
+	left: 0;
+	bottom: 0;
 }
